Add importing pluigins from gist, update some api to support plugins